--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
 
         <script src="js/pages.min.js"></script>
         <script src="phonegap.js"></script>
+        <script src="js/rAF.js"></script>
         <script src="js/liner.js"></script>
         <script>
             Liner.bindCanvas('screen');
