Sound effects engine working

--- a/www/index.html
+++ b/www/index.html
@@ -36,10 +36,11 @@
         <script src="js/pages.min.js"></script>
         <script src="phonegap.js"></script>
         <script src="js/rAF.js"></script>
+        <script src="js/howler.min.js"></script>
         <script src="js/liner.js"></script>
         <script>
-            Liner.bindCanvas('screen');
-            Liner.start();
+            Liner.engine.bindCanvas('screen');
+            Liner.engine.start();
         </script>
     </body>
 </html>
