Modularized with requireJS

--- a/www/index.html
+++ b/www/index.html
@@ -32,15 +32,7 @@
                 <canvas id="screen"></canvas>
             </section>
         </main>
-
-        <script src="js/pages.min.js"></script>
         <script src="phonegap.js"></script>
-        <script src="js/rAF.js"></script>
-        <script src="js/howler.min.js"></script>
-        <script src="js/liner.js"></script>
-        <script>
-            Liner.engine.bindCanvas('screen');
-            Liner.engine.start();
-        </script>
+        <script data-main="js/main" src="js/require.js"></script>
     </body>
 </html>
